finish semantic, modify g4